# BlockchainVotingSystem

./: .env  .gitignore  Packages.json  README.md  StartScript.md  config-overrides.js  truffle-config.js
.github/workflows/: main.yaml  main.yml
UMLsrc/: Election.wsd  UML_ANwendungsfall_Registrierung.uml  Wahlsequenzdiagramm.uml  Wahlsequenzdiagramm.wsd
cache/: VoteLedger.sol  hardhat.config.js
contracts/: Election.sol  ElectionRegistry.sol  Tally.sol
de/: README.md
doc/: de.readme.md
doc/installation/: AllVersions.md  Bundestagswahl.md  Proposal.md
doc/installation and Configuration/: AllVersions.md  Bundestagswahl.md  Configuration.de.md  Configuration.en.md  General_Instructions.md  HyperledgerBesu.md  Proposal.md
election-system/: ExampleVoters.csv  hardhat.config.js  package-lock.json  package.json  start-all.sh
election-system/admin-ui/: package-lock.json  package.json  tsconfig.json
election-system/api/: Bundestagswahl.json  Election.json  Registry.json  apiBundestagswahl.js  apiProposal.js  apiProposals.js  decyptVotes.js  deployment-address.txt  index.js  server.js
election-system/contracts/: Bundestagswahl.sol  Election.sol  ElectionRegister.sol  Proposals.sol  Registry.sol  Tally.sol
election-system/frontend/: .gitignore  App.js  index.css  (+2 more)
election-system/nextFE/bvs/src-tauri/: Cargo.toml  tauri.conf.json
election-system/nextFE/bvs/src-tauri/src/: abi.rs  abi_decode.rs  blockchain.rs  main.rs
scripts/: deploy-and-use.js
src/: ActiveElections.js  App.js  CreateElection.js  VoteModal.js
translations/: messages+intl-icu.de.xlf
(+206 files in other folders)
