[package]
name = "BVS"
version = "0.31.2"
description = "BlockchainVotingSystem"
authors = ["Louis Göttertz"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri Core
tauri = { version = "2.8.5", features = [] }

# Async Runtime
tokio = { version = "1", features = ["full"] }

# JSON & Serialisierung
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Für Hex-Parsing (nützlich für Blockchain ABI)
hex = "0.4"

# Ethers-Core für ABI-Decode (wenn du decode_function_result nutzt)
ethers-core = "2"

dirs = "5"
